Sell some dog training material

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -41,7 +41,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Simplified stack</small></p>
+        <p><small>work aside, do you love <a href="https://63e7cy2e8t2r8o0x-wre572av5.hop.clickbank.net/">dogs?</a></small></p>
     </footer>
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
