get rid of google postgresql with pq dependancy

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,7 +38,7 @@
 
     </section>
     <footer>
-        <p><small>work aside, do you love <a href="https://63e7cy2e8t2r8o0x-wre572av5.hop.clickbank.net/">dogs?</a></small></p>
+        <p><small>gh star to keep us closer</small></p>
     </footer>
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
